--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/react": "19.0.10",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.8.2"
   }
 }
